config/istio/gateway/oauth-envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: mcp-well-known-direct
  namespace: gateway-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      context: GATEWAY
      routeConfiguration:
        vhost:
          name: "mcp.127-0-0-1.sslip.io:8080"
    patch:
      operation: INSERT_FIRST
      value:
        name: mcp-well-known-direct
        match:
          path: "/.well-known/oauth-protected-resource/mcp"
        direct_response:
          status: 200
          body:
            inline_string: >
              {"resource_name":"MCP Server","resource":"http://mcp.127-0-0-1.sslip.io:8888/mcp","authorization_servers":["http://keycloak.127-0-0-1.sslip.io:8888/realms/mcp"],"bearer_methods_supported": ["header"],"scopes_supported":["basic"]}
        response_headers_to_add:
        - header:
            key: content-type
            value: application/json
        - header:
            key: Access-Control-Allow-Origin
            value: "*"
        - header:
            key: Access-Control-Allow-Methods
            value: "GET, POST, PUT, DELETE, OPTIONS, HEAD"
        - header:
            key: Access-Control-Allow-Headers
            value: "Content-Type, Authorization, Accept, Origin, X-Requested-With"
        - header:
            key: Access-Control-Max-Age
            value: "3600"
        - header:
            key: Access-Control-Allow-Credentials
            value: "true"
